# heads-and-hands-task

./: Array.h  ArrayGenerator.cpp  ArrayGenerator.h  CMakeLists.txt  IGenerator.h  MergeSorter.h  NumberGenerator.cpp  NumberGenerator.h  README.md  main.cpp
Exceptions/: BaseException.h  InvalidArgumentException.h  MemoryNotAllocatedException.h
